--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -1,16 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Admin</ion-title>
-    <!-- Icono de cerrar sesión -->
     <ion-buttons slot="end">
-      <ion-button (click)="cerrarSesion()">  <!-- Función cerrarSesion se llama aquí -->
-        <ion-icon name="log-out-outline"></ion-icon>  <!-- Icono de cierre de sesión -->
+      <ion-button (click)="cerrarSesion()">
+        <ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- Contenido de la página principal -->
   <h1>Hola, {{ usernameRegistro }}. ¡Gracias por crear tu cuenta!</h1>
 </ion-content>
