--- a/src/app/pages/elegusuario/elegusuario.page.scss
+++ b/src/app/pages/elegusuario/elegusuario.page.scss
@@ -1,7 +1,7 @@
 .card-container {
 display: flex;
 flex-direction: column;
-gap: 20px; /* Añade espacio entre las cartas */
+gap: 20px;
 padding: 20px;
 }
 
@@ -42,7 +42,7 @@ color: #333;
 }
 
 ion-content {
-background-color: #f5f5f5; /* Color de fondo suave */
+background-color: #f5f5f5;
 height: 100%;
 padding: 20px;
 }
