Ajuste de html y scss para boton en Mapa

--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -10,9 +10,11 @@
 </ion-header>
 
 <ion-content>
-  <div id="map" style="height: 100vh; width: 100%;"></div>
-  <div id="container">
-    <ion-button (click)="obtenerMiUbicacion()">Obtener Ubicación</ion-button>
+  <div id="map" style="height: 100%;"></div>
+  <div class="boton-ubicacion">
+    <ion-button color="primary" shape="round" (click)="obtenerMiUbicacion()">
+      <ion-icon name="locate-outline" slot="icon-only"></ion-icon>
+    </ion-button>
   </div>
 </ion-content>
 
