--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -10,5 +10,5 @@
 </ion-header>
 
 <ion-content>
-  <h1>Hola, {{ usernameRegistro }}. ¡Gracias por crear tu cuenta!</h1>
+  <h1>Bienvenido, {{ usernameRegistro }}.</h1>
 </ion-content>
