Comentarios para mejora

--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -12,7 +12,7 @@
         <p>Username: {{ usuario.usernameRegistro }}</p>
       </ion-label>
       <ion-button (click)="eliminarUsuario(usuario.usernameRegistro)" color="danger">Eliminar</ion-button>
-      <ion-button (click)="irAActualizarUsuario(usuario.usernameRegistro)">Actualizar</ion-button>
+      <ion-button (click)="irAActualizarUsuario(usuario.usernameRegistro)">Actualizar</ion-button> <!-- Generar nueva pagina para Modificar datos -->
     </ion-item>
   </ion-list>
 
