--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -15,7 +15,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="6">
-        <ion-card button [routerLink]="['/...']">
+        <ion-card button [routerLink]="['/viaje']">
           <ion-card-content>
             <img src="assets/img/viaje.png" alt="Viaje" />
             <p>Viaje</p>
@@ -75,11 +75,7 @@
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
-        <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" [routerLink]="['/mapa']" style="margin-top: -5px;">
-            <ion-icon name="map-outline" size="large"></ion-icon>
-          </ion-button>
-        </ion-col>
+
         <ion-col class="ion-text-center" size="auto">
           <ion-button fill="clear" [routerLink]="['/ajustes']" style="margin-top: -5px;">
             <ion-icon name="settings-outline" size="large"></ion-icon>
