--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -22,6 +22,8 @@
       <ion-label>
         <h2>{{ viaje.nombre }} {{ viaje.apellido }}</h2>
         <p>Vehículo: {{ viaje.modeloVehiculo }} ({{ viaje.colorVehiculo }})</p>
+        <p>Origen: {{ viaje.origen }}</p>
+        <p>Destino: {{ viaje.destino }}</p>
         <p>Precio por pasajero: CLP {{ viaje.precioPasajero }}</p>
       </ion-label>
     </ion-item>
@@ -33,6 +35,8 @@
     </ion-card-header>
     <ion-card-content>
       <p><strong>Conductor:</strong> {{ viajeSeleccionado.nombre }} {{ viajeSeleccionado.apellido }}</p>
+      <p><strong>Origen:</strong> {{ viajeSeleccionado.origen }}</p>
+      <p><strong>Destino:</strong> {{ viajeSeleccionado.destino }}</p>
       <p><strong>Precio por pasajero:</strong> CLP {{ viajeSeleccionado.precioPasajero }}</p>
       
       <ion-item lines="none">
