Cambios en registros, inicio de sesión y administrador, eliminación de UsernameRegistro

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
       <ion-item>
         <ion-input 
           class="username-input"
-          label="Username" 
+          label="Nombre" 
           labelPlacement="floating"
           [(ngModel)]="username"
           (ionFocus)="clearInput()">
