--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -9,10 +9,11 @@
       <ion-label>
         <h2>{{ usuario.nombre }} {{ usuario.apellido }}</h2>
         <p>Email: {{ usuario.correoRegistro }}</p>
-        <p>Username: {{ usuario.usernameRegistro }}</p>
       </ion-label>
-      <ion-button (click)="eliminarUsuario(usuario.usernameRegistro)" color="danger">Eliminar</ion-button>
-      <ion-button (click)="irAActualizarUsuario(usuario.usernameRegistro)">Actualizar</ion-button> <!-- Generar nueva pagina para Modificar datos -->
+      <ion-buttons slot="end">
+        <ion-button (click)="eliminarUsuario(usuario)" color="danger">Eliminar</ion-button>
+        <ion-button (click)="irAActualizarUsuario(usuario)">Actualizar</ion-button>
+      </ion-buttons>
     </ion-item>
   </ion-list>
 
