--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,5 +1,4 @@
 <ion-header [translucent]="true" class="ion-no-border">
-
 </ion-header>
 
 <ion-content class="ion-register">
@@ -8,7 +7,7 @@
   <h4 class="ion-info">Información:</h4>
 
   <ion-list>
-
+    <!-- Nombre -->
     <ion-item>
       <ion-input 
         class="nombre-input"
@@ -18,6 +17,7 @@
       </ion-input>
     </ion-item>
 
+    <!-- Apellido -->
     <ion-item>
       <ion-input 
         class="apellido-input"
@@ -27,6 +27,7 @@
       </ion-input>
     </ion-item> 
 
+    <!-- Fecha de Nacimiento -->
     <ion-item>
       <ion-input
         class="fecha-nacimiento-input"
@@ -53,6 +54,7 @@
       Aplicar
     </ion-button>
 
+    <!-- Correo Electrónico -->
     <ion-item>
       <ion-input    
         class="correoRegistro"
@@ -64,22 +66,11 @@
       </ion-input>
     </ion-item>
 
-
-    
     <ion-text color="danger" *ngIf="emailInvalid" class="emailError">
       El correo electrónico no es válido
     </ion-text>
-    
 
-    <ion-item>
-      <ion-input    
-        class="username-registro"
-        label="Nombre de Usuario"
-        labelPlacement="floating"
-        [(ngModel)]="usernameRegistro">
-      </ion-input>
-    </ion-item>
-
+    <!-- Contraseña -->
     <ion-item>
       <ion-input 
         label="Contraseña" 
@@ -94,6 +85,7 @@
       </ion-icon>
     </ion-item>
 
+    <!-- Confirmar Contraseña -->
     <ion-item>
       <ion-input 
         label="Confirmar Contraseña" 
@@ -113,15 +105,13 @@
       Las contraseñas no coinciden
     </ion-text>
 
+    <!-- Botón Crear Cuenta -->
     <ion-button 
-    expand="block" 
-    [disabled]="!isFormValid()" 
-    (click)="crearCuenta()"
-    class="crearCuenta">
-    Crear cuenta
-    
+      expand="block" 
+      [disabled]="!isFormValid()" 
+      (click)="crearCuenta()"
+      class="crearCuenta">
+      Crear cuenta
     </ion-button>
-
-
   </ion-list>
 </ion-content>
