Modificando Forma-viaje

--- a/src/app/pages/forma-viaje/forma-viaje.page.html
+++ b/src/app/pages/forma-viaje/forma-viaje.page.html
@@ -13,7 +13,7 @@
   <h3 class="ion-title-register">Formulario Viajes</h3>
   <h4 class="ion-info">Información:</h4>
   <ion-list>
-    <ion-item>
+    <!-- <ion-item>
       <ion-input
         label="Nombre"
         labelPlacement="floating"
@@ -145,7 +145,7 @@
         labelPlacement="floating"
         [(ngModel)]="numeroCuenta">
       </ion-input>
-    </ion-item>
+    </ion-item> -->
 
     <ion-item class="input-item">
       <ion-input
