--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -55,8 +55,7 @@
       <ion-item class="input-item">
         <ion-input
           label="Desa marcar una parada?"
-          labelPlacement="floating"
-          [(ngModel)]="">
+          labelPlacement="floating">
         </ion-input>
       </ion-item>
       
