--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -26,6 +26,16 @@
         [(ngModel)]="apellido">
       </ion-input>
     </ion-item> 
+    
+    <!-- RUT -->
+    <ion-item>
+      <ion-input 
+        class="rut-input"
+        label="RUT" 
+        labelPlacement="floating"
+        [(ngModel)]="rut">
+      </ion-input>
+    </ion-item>
 
     <!-- Fecha de Nacimiento -->
     <ion-item>
@@ -54,6 +64,16 @@
       Aplicar
     </ion-button>
 
+    <!-- teléfono -->
+    <ion-item>
+      <ion-input 
+        class="telefono-input"
+        label="Teléfono" 
+        labelPlacement="floating"
+        [(ngModel)]="telefono">
+      </ion-input>
+    </ion-item>
+    
     <!-- Correo Electrónico -->
     <ion-item>
       <ion-input    
