--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -1,27 +1,26 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar color="dark">
     <ion-title>Uber</ion-title>
-
     <ion-buttons slot="end">
       <ion-button (click)="logout()">
         <ion-icon class="custom-icon" slot="icon-only" name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">reserva</ion-title>
+      <ion-title size="large">Reserva</ion-title>
     </ion-toolbar>
   </ion-header>
+  
   <ion-list>
     <ion-item *ngFor="let viaje of viajes" (click)="seleccionarViaje(viaje)">
       <ion-label>
-        <h2>{{ viaje.nombre }} {{ viaje.apellido }}</h2>
-        <p>Vehículo: {{ viaje.modeloVehiculo }} ({{ viaje.colorVehiculo }})</p>
+        <h2>{{ viaje.conductor?.nombre }} {{ viaje.conductor?.apellido }}</h2>
+        <p>Vehículo: {{ viaje.conductor?.modeloVehiculo }} ({{ viaje.conductor?.colorVehiculo }})</p>
         <p>Origen: {{ viaje.origen }}</p>
         <p>Destino: {{ viaje.destino }}</p>
         <p>Precio por pasajero: CLP {{ viaje.precioPasajero }}</p>
@@ -34,11 +33,13 @@
       <ion-card-title>Detalles del Viaje</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p><strong>Conductor:</strong> {{ viajeSeleccionado.nombre }} {{ viajeSeleccionado.apellido }}</p>
+      <p><strong>Conductor:</strong> {{ viajeSeleccionado.conductor?.nombre }} {{ viajeSeleccionado.conductor?.apellido }}</p>
+      <p><strong>Vehículo:</strong> {{ viajeSeleccionado.conductor?.modeloVehiculo }} ({{ viajeSeleccionado.conductor?.colorVehiculo }})</p>
+      <p><strong>Teléfono de contacto:</strong> {{ viajeSeleccionado.conductor?.telefonoContacto }}</p>
       <p><strong>Origen:</strong> {{ viajeSeleccionado.origen }}</p>
       <p><strong>Destino:</strong> {{ viajeSeleccionado.destino }}</p>
       <p><strong>Precio por pasajero:</strong> CLP {{ viajeSeleccionado.precioPasajero }}</p>
-      
+
       <ion-item lines="none">
         <ion-label>Cantidad de Pasajeros</ion-label>
         <ion-button (click)="decrementarPasajeros()" fill="outline" color="danger">
@@ -56,7 +57,6 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
-
 
 <ion-footer>
   <ion-toolbar color="dark">
