Mejora de restablecer contraseña

--- a/src/app/pages/restcontra/restcontra.page.html
+++ b/src/app/pages/restcontra/restcontra.page.html
@@ -6,20 +6,44 @@
 
 <ion-content [fullscreen]="true" [scrollY]="false">
   <div id="container" style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; padding: 16px; text-align: center;">
-    <h1 style="font-size: 1.8rem; margin-bottom: 20px;">Ingresa tu usuario</h1>
+    <h1 style="font-size: 1.8rem; margin-bottom: 20px;">Restablecer Contraseña</h1>
     <form (ngSubmit)="onSubmit()" style="width: 100%; max-width: 400px;">
       <ion-list>
         <ion-item>
           <ion-input 
-            class="usuario-input"
-            label="Ingrese su Usuario" 
+            [(ngModel)]="correo"
+            name="correo"
+            label="Ingrese su correo"
             labelPlacement="floating"
-            type="text">
+            type="email"
+            required>
+          </ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input
+            [(ngModel)]="nuevaPassword"
+            name="nuevaPassword"
+            label="Nueva contraseña"
+            labelPlacement="floating"
+            type="password"
+            required>
+          </ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-input
+            [(ngModel)]="confirmPassword"
+            name="confirmPassword"
+            label="Confirmar contraseña"
+            labelPlacement="floating"
+            type="password"
+            required>
           </ion-input>
         </ion-item>
       </ion-list>
+      <div *ngIf="passwordMismatch" class="error-message">Las contraseñas no coinciden.</div>
+      <div *ngIf="emailInvalid" class="error-message">El correo ingresado no es válido.</div>
       <ion-button expand="block" type="submit" style="width: 100%; max-width: 400px; height: 50px; font-size: 1.2rem;">
-        Ingresar
+        Restablecer Contraseña
       </ion-button>
     </form>
   </div>
