--- a/src/app/pages/restcontra/restcontra.page.scss
+++ b/src/app/pages/restcontra/restcontra.page.scss
@@ -45,3 +45,9 @@
     --color: gray;
     }
     
+
+    #error-message {
+        color: red;
+        font-size: 0.9rem;
+        margin: 10px 0;
+    }
