Modificacion base de datos y mejora de estetica de la pagina principal y rest contra

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true" class="ion-no-border ion-text-center">
   <ion-toolbar>
     <ion-title>
-      <h1 class="title">Uber</h1>
+      <h1 class="title">Uber Duoc</h1>
       <h6>Lleva de forma fácil y Rápida</h6>
     </ion-title>
   </ion-toolbar>
@@ -19,7 +19,7 @@
       <ion-item>
         <ion-input 
           class="username-input"
-          label="Nombre" 
+          label="Nombre de Usuario" 
           labelPlacement="floating"
           [(ngModel)]="username"
           (ionFocus)="clearInput()">
