--- a/src/app/pages/elegusuario/elegusuario.page.html
+++ b/src/app/pages/elegusuario/elegusuario.page.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 <ion-content>
-  <h2 style="text-align: center;">¿Que quieres hacer hoy, {{ nombre }}?</h2>
+  <h2 style="text-align: center;">¿Que quieres hacer hoy, {{ username }}?</h2>
   <div class="card-container">
     <ion-card button (click)="navigateTo('conductor')">
       <ion-card-content>
