--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar color="dark">
-    <ion-title>Uber</ion-title>
+    <ion-title>UberDuoc</ion-title>
 
     <ion-buttons slot="end">
       <ion-button (click)="logout()">
@@ -14,7 +14,7 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col size="6">
+      <ion-col size="4">
         <ion-card button [routerLink]="['/viaje']">
           <ion-card-content>
             <img src="assets/img/viaje.png" alt="Viaje" />
@@ -22,31 +22,12 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size="4">
         <ion-card button [routerLink]="['/...']">
           <ion-card-content>
             <img src="assets/img/teens.png" alt="Teens" />
-            <p>Teens</p>
-            <ion-badge color="primary" class="new-badge">Nuevo</ion-badge>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  
-    <ion-row>
-      <ion-col size="4">
-        <ion-card button [routerLink]="['/...']">
-          <ion-card-content>
-            <img src="assets/img/viajegrupal.png" alt="Viaje grupal" />
-            <p>Grupal</p>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col size="4">
-        <ion-card button [routerLink]="['/...']">
-          <ion-card-content>
-            <img src="assets/img/transito.png" alt="Tránsito" />
-            <p>Tránsito</p>
+            <p>Chats</p>
+            <ion-badge color="primary" class="new-badge">Soon</ion-badge>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -60,6 +41,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+    
 
   <section class="img-section">
     <img src="assets/img/uber-definit.png" alt="Uber3">
